force-app/main/default/objects/ARTL_Dynamic_Dependency__mdt/ARTL_Dynamic_Dependency__mdt.object-meta.xml
<CustomObject>
    <description>SFDC-330: Create Dynamic Dependency Definition</description>
    <label>ARTL Dynamic Dependency</label>
    <pluralLabel>ARTL Dynamic Dependencys</pluralLabel>
</CustomObject>