force-app/main/default/objects/ARTL_Dynamic_Dependency__mdt/fields/Dependency__c.field-meta.xml
<CustomField>
    <fullName>Dependency__c</fullName>
    <label>Dependency</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>