force-app/main/default/objects/ARTL_Dynamic_Dependency__mdt/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>